# torch-submit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.dev.txt  setup.py
.github/workflows/: publish.yaml
docs/: README.md  _version.md  cli.md  cluster_config.md  config.md  connection.md  executor.md  job.md  types.md  utils.md
docs/commands/: cluster.md  database.md  index.md  job.md
torch_submit/: __init__.py  cli.py  cluster_config.py  config.py  connection.py  db_config.py  executor.py  job.py  types.py  utils.py
torch_submit/commands/: cluster.py  database.py  job.py  logs.py
